# PitchiQ_

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.bat  run.ps1  validate_no_leakage.py
.github/workflows/: ci.yml  train.yml
configs/: features.yaml  model.yaml  sources.yaml
docs/planning/: football_prediction_plan.jsx  pitchiq_frontend_blueprint.jsx
src/: __init__.py  config.py  logging_config.py
src/api/: __init__.py  data_loader.py  main.py
src/dashboard/: __init__.py  app.py
src/dashboard/components/: __init__.py  cards.py  sections.py  theme.py
src/dashboard/services/: __init__.py  api.py  data.py  football_api.py
src/domain/: __init__.py  football.py
src/evaluation/: __init__.py  evaluate.py
src/features/: __init__.py  build_features.py  columns.py
src/ingestion/: __init__.py  run_ingestion.py  schemas.py
src/ingestion/adapters/: __init__.py  fbref.py  football_data.py  understat.py
src/training/: __init__.py  train.py  tune_model.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_domain.py  test_features.py
