[tool.poetry]
name = "pitchiq"
version = "0.1.0"
description = "Football match outcome prediction engine"
authors = ["PitchIQ Team"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.4"
xgboost = "^2.0"
lightgbm = "^4.3"
torch = "^2.2"
shap = "^0.44"
optuna = "^3.5"
duckdb = "^0.10"
pandera = "^0.18"
soccerdata = "^1.5"
rapidfuzz = "^3.6"
python-dotenv = "^1.0"
mlflow = "^2.10"
fastapi = "^0.110"
streamlit = "^1.32"
plotly = "^5.19"
uvicorn = "^0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
ruff = "^0.3"
mypy = "^1.8"
nbstripout = "^0.7"
pre-commit = "^3.6"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
